bilisim okuryazari belgesinin de u18a-en calismasi bitmis.

--- a/trunk/web/eng/belgeler/index.html
+++ b/trunk/web/eng/belgeler/index.html
@@ -57,7 +57,7 @@ Contract</b> (eng) (25/02/2005)</td>
                 </tr>
                 <tr>
                   <td class="metin" align="left"><b>Computer Literate
-Users</b> (04/11/2004)</td>
+Users</b> (eng) (04/11/2004)</td>
                   <td class="menubar"><a href="./okuryazar/index.html">HTML</a></td>
                   <td class="menubar"><a
  href="./okuryazar/okuryazar.html">HTML (one page)</a></td>
@@ -116,7 +116,7 @@ You can reach to technical papers from our projects page.
 <p class="not">
 Information and documents on Uludağ Project web pages can be used freely anywhere with original source credit.
 <em><br>
-<strong>TÜBİTAK - UEKAE, PK.74 41470, Gebze / Kocaeli, TÜRKİYE.</strong></em>
+<strong>TÜBİTAK - UEKAE, PK.74 41470, Gebze / Kocaeli.</strong></em>
 For information and suggestion(s) please write to <a href="mailto:bilgi%20at%20uludag.org.tr">bilgi
 at uludag.org.tr</a>
 </p>
