--- a/trunk/web/eng/belgeler/okuryazar/index.html
+++ b/trunk/web/eng/belgeler/okuryazar/index.html
@@ -47,19 +47,19 @@
 <table class='navbar'><tbody><tr><td class='navhide'><img src='../../images/nav_back.png'> Önceki sayfa</td><td class='navbut'><a href='index.html'><img src='../../images/nav_home.png' border=0> Başlangıç</a></td><td class='navbut'><a href='node_1.html'><img src='../../images/nav_forward.png' border=0> Sonraki sayfa</a></td></tr></tbody></table>
 
 
-<H1 ALIGN=center>Bilişim Okur-Yazarı</H1>
+<H1 ALIGN=center>Computer Literate</H1>
 
 
 <H2>İçindekiler</H2>
 <UL><LI>
-<A HREF="node_1.html#htoc1">1&nbsp;&nbsp;Giriş</A>
-<LI><A HREF="node_2.html#htoc2">2&nbsp;&nbsp;Bilişim Okur-Yazarı Becerileri</A>
+<A HREF="node_1.html#htoc1">1&nbsp;&nbsp;Introduction</A>
+<LI><A HREF="node_2.html#htoc2">2&nbsp;&nbsp;Computer Literate Skills</A>
 <UL><LI>
-<A HREF="node_2.html#htoc3">2.1&nbsp;&nbsp;Temel Beceriler</A>
-<LI><A HREF="node_2.html#htoc4">2.2&nbsp;&nbsp;Masaüstü becerileri</A>
+<A HREF="node_2.html#htoc3">2.1&nbsp;&nbsp;Basic Skills</A>
+<LI><A HREF="node_2.html#htoc4">2.2&nbsp;&nbsp;Desktop Skills</A>
 </UL>
-<LI><A HREF="node_3.html#htoc5">3&nbsp;&nbsp;Kişisel bilgi yönetimi ve ofis uygulamaları becerileri</A>
-<LI><A HREF="node_4.html#htoc6">4&nbsp;&nbsp;İnternet becerileri</A>
+<LI><A HREF="node_3.html#htoc5">3&nbsp;&nbsp;Personal information management and office applications skills</A>
+<LI><A HREF="node_4.html#htoc6">4&nbsp;&nbsp;Internet skills</A>
 </UL>
 
 
