--- a/trunk/web/eng/belgeler/okuryazar/node_2.html
+++ b/trunk/web/eng/belgeler/okuryazar/node_2.html
@@ -47,58 +47,55 @@
 <table class='navbar'><tbody><tr><td class='navbut'><a href='node_1.html'><img src='../../images/nav_back.png' border=0> Önceki sayfa</a></td><td class='navbut'><a href='index.html'><img src='../../images/nav_home.png' border=0> Başlangıç</a></td><td class='navbut'><a href='node_3.html'><img src='../../images/nav_forward.png' border=0> Sonraki sayfa</a></td></tr></tbody></table>
 
 
-<H1 ALIGN=center>Bilişim Okur-Yazarı</H1>
+<H1 ALIGN=center>Computer Literate</H1>
 
 
-<H2><A NAME="htoc2">2</A>&nbsp;&nbsp;Bilişim Okur-Yazarı Becerileri</H2>
-Biz bilişim okur-yazarı olarak tanımladığımız kullanıcıların, aşağıdaki
-bilgi ve yeteneklere sahip olduğu varsayıyoruz. Bilişim okur-yazarı
-aşağıdaki işlemleri her durumda sorunsuz olarak yerine getiremiyor
-olabilir; bazı durumlarda kullanıcının yetenekleri ve yetkisi dışındaki
-sorunlar ortaya çıkabilir ve kullanıcı bu temel işlemleri yerine getiremeyebilir.
-Yine de ideal ortamda kullanıcının aşağıdaki yeteneklere sahip olduğu
-düşünülmektedir.<BR>
+<H2><A NAME="htoc2">2</A>&nbsp;&nbsp;Computer Literate Skills</H2>
+We assume that people who defined as computer literates know information
+and have skills below. Computer literate may not do all the things
+below without any mistake in some situations; in some situations some
+problems that beyond users power appears and user may not do basic
+processes. Still assuming the user has skills below in ideal environment.<BR>
 <BR>
 
-<H3><A NAME="htoc3">2.1</A>&nbsp;&nbsp;Temel Beceriler</H3>
+<H3><A NAME="htoc3">2.1</A>&nbsp;&nbsp;Basic Skills</H3>
 <UL><LI>
-Monitörü açıp kapayabilir, iyi görüntü için ayarlayabilir.
-<LI>Güç kablosu takılı mı, güç kaynağı çalışıyormu kontrol edebilir.
-<LI>Fare kullanabilir
-<LI>Yazıcısının ayarlarını yapıp kullanabilir
-<LI>Tarayıcısının ayarlarını yapıp kullanabilir
-<LI>Bilgisayarın çevresel aygıtlarını söküp yeniden takabilir.
-<LI>Yapmak istediği iş için hangi uygulamanın gerekli olduğunu seçebilir
-<LI>Kendisi için gerekli donanımı seçip alabilir
-<LI>Disket, CD, DVD, usbdisk, usbmemory gibi değişik veri saklama ortamlarını
-kullanabilir
-<LI>Gerekli uygulamayı kullanıp CD/DVD yazdırabilir
-<LI>Bilgisayar teknolojisi kullanılan diğer teknolojileri de kullanabilir,
-bilgisayarı ile bunların iletişimini sağlayabilir (cep telefonu, PDA,
-dijital fotoğraf makinesi, vb.)
+Can power on/off monitor, configure it for best view.
+<LI>Can check power cable is connected and power supply is working.
+<LI>Can use mouse.
+<LI>Can configure and use printer.
+<LI>Can configure and use web browser.
+<LI>Can mount/demount hardwares.
+<LI>Can select which application is necessary for his/her work.
+<LI>Can select and buy hardware.
+<LI>Can use different kind of storage devices like Floppy, CD, DVD, USB
+Disk, USB Stick etc.
+<LI>Can use burn CD/DVD.
+<LI>Can use technologies that uses computer technology, make connection
+between them (mobile phone, pda, digital camera etc.)
 </UL>
 
-<H3><A NAME="htoc4">2.2</A>&nbsp;&nbsp;Masaüstü becerileri</H3>
+<H3><A NAME="htoc4">2.2</A>&nbsp;&nbsp;Desktop Skills</H3>
 <UL><LI>
-Yazılım kurmayı/güncellemeyi/kaldırmayı bilir
-<LI>Masaüstü ortamının ne olduğunu, neler yapabileceğini, nasıl özelleştirebileceğini
-bilir. (duvarkağıdı, saat ayarı, ses ayarı, renkler ve çözünürlük,
-tema, simgeler, vb.<SUP><A NAME="text1" HREF="node_4.html#note1">1</A></SUP>)
-<LI>Dosyalarını yönetebilir. 
+Knows install/update/uninstall software.
+<LI>Knows what is desktop environment, what he/she can do with it, how
+to customize. (wallpaper, clock configuration, sound configuration,
+resolution and colors, themes, icons etc.<SUP><A NAME="text1" HREF="node_4.html#note1">1</A></SUP>)
+<LI>Can manage files. 
 <UL><LI>
-Yeni dosya/dizin yaratabilir
-<LI>Masaüstünün kopyala/yapıştır/kes özelliklerini kullanabilir
-<LI>Dosya/dizin silebilir
+Can create file/directory.
+<LI>Can use desktops copy/paste/cut features.
+<LI>Can delete file/directory.
 </UL>
-<LI>Verilerini değişik ortamlara aktarabilir, saklayabilir, yedekleyebilir.
-<LI>Bir uygulamadan nasıl çıkacağını bilir
-<LI>Arşivlemeyi, sıkıştırmayı ve açmayı bilir
-<LI>Yardım dosyalarının varlığını bilir, yazılımlar ile ilgili sorun yaşadığında
-yardım dosyalarını okuyabilir
-<LI>Disk/disket biçimlendirmeyi bilir
-<LI>Ağ üzerinden dosya paylaşımını kullanabilir
-<LI>Çokluortam teknolojilerini kullanabilir (ses, video, grafik, radyo/TV,
-vb.)
+<LI>Can transport, save and backup datas.
+<LI>Knows how to exit a application.
+<LI>Knows archiving, compressing and opening.
+<LI>Knows existing of help files, can use them when gets problem with
+softwares.
+<LI>Knows disk formatting.
+<LI>Can use file sharing on network.
+<LI>Can use multimedia technologies (audio, video, graphics, radio/TV
+etc.).
 </UL>
 <table class='navbar'><tbody><tr><td class='navbut'><a href='node_1.html'><img src='../../images/nav_back.png' border=0> Önceki sayfa</a></td><td class='navbut'><a href='index.html'><img src='../../images/nav_home.png' border=0> Başlangıç</a></td><td class='navbut'><a href='node_3.html'><img src='../../images/nav_forward.png' border=0> Sonraki sayfa</a></td></tr></tbody></table>
 </div>
