--- a/trunk/web/eng/belgeler/okuryazar/node_3.html
+++ b/trunk/web/eng/belgeler/okuryazar/node_3.html
@@ -47,14 +47,15 @@
 <table class='navbar'><tbody><tr><td class='navbut'><a href='node_2.html'><img src='../../images/nav_back.png' border=0> Önceki sayfa</a></td><td class='navbut'><a href='index.html'><img src='../../images/nav_home.png' border=0> Başlangıç</a></td><td class='navbut'><a href='node_4.html'><img src='../../images/nav_forward.png' border=0> Sonraki sayfa</a></td></tr></tbody></table>
 
 
-<H1 ALIGN=center>Bilişim Okur-Yazarı</H1>
+<H1 ALIGN=center>Computer Literate</H1>
 
 
-<H2><A NAME="htoc5">3</A>&nbsp;&nbsp;Kişisel bilgi yönetimi ve ofis uygulamaları becerileri</H2>
+<H2><A NAME="htoc5">3</A>&nbsp;&nbsp;Personal information management and office applications skills</H2>
 <UL><LI>
-Kelime işlemci, sunumcu, hesap çizelgesi, vb. ofis yazılımlarını kullanabilir.
-<LI>Kişisel bilgi yönetimi için ajanda, adres defteri, vb. yazılımları
-kullanabilir.
+Can use office applications like word processing, presentation, spreadsheet
+etc.
+<LI>Can use personal information manager applications like organizer,
+address book etc.
 </UL>
 <table class='navbar'><tbody><tr><td class='navbut'><a href='node_2.html'><img src='../../images/nav_back.png' border=0> Önceki sayfa</a></td><td class='navbut'><a href='index.html'><img src='../../images/nav_home.png' border=0> Başlangıç</a></td><td class='navbut'><a href='node_4.html'><img src='../../images/nav_forward.png' border=0> Sonraki sayfa</a></td></tr></tbody></table>
 </div>
