--- a/trunk/web/eng/belgeler/okuryazar/okuryazar.html
+++ b/trunk/web/eng/belgeler/okuryazar/okuryazar.html
@@ -46,120 +46,115 @@
 <div class="belge">
 
 
-<H1 ALIGN=center>Bilişim Okur-Yazarı</H1>
+<H1 ALIGN=center>Computer Literate</H1>
 
 <!--TOC section İçindekiler-->
 
 <H2>İçindekiler</H2><!--SEC END -->
 
 <UL><LI>
-<A HREF="#htoc1">1&nbsp;&nbsp;Giriş</A>
-<LI><A HREF="#htoc2">2&nbsp;&nbsp;Bilişim Okur-Yazarı Becerileri</A>
+<A HREF="#htoc1">1&nbsp;&nbsp;Introduction</A>
+<LI><A HREF="#htoc2">2&nbsp;&nbsp;Computer Literate Skills</A>
 <UL><LI>
-<A HREF="#htoc3">2.1&nbsp;&nbsp;Temel Beceriler</A>
-<LI><A HREF="#htoc4">2.2&nbsp;&nbsp;Masaüstü becerileri</A>
+<A HREF="#htoc3">2.1&nbsp;&nbsp;Basic Skills</A>
+<LI><A HREF="#htoc4">2.2&nbsp;&nbsp;Desktop Skills</A>
 </UL>
-<LI><A HREF="#htoc5">3&nbsp;&nbsp;Kişisel bilgi yönetimi ve ofis uygulamaları becerileri</A>
-<LI><A HREF="#htoc6">4&nbsp;&nbsp;İnternet becerileri</A>
+<LI><A HREF="#htoc5">3&nbsp;&nbsp;Personal information management and office applications skills</A>
+<LI><A HREF="#htoc6">4&nbsp;&nbsp;Internet skills</A>
 </UL>
 
 
-<!--TOC section Giriş-->
+<!--TOC section Introduction-->
 
-<H2><A NAME="htoc1">1</A>&nbsp;&nbsp;Giriş</H2><!--SEC END -->
+<H2><A NAME="htoc1">1</A>&nbsp;&nbsp;Introduction</H2><!--SEC END -->
 
-Bilişim okur-yazarının bilgisayar teknolojileri hakkında yüzeysel
-bir bilgiye sahip olması yeterlidir; kişisel bir bilgisayarı klasikleşmiş
-bir takım işler için kullanabilir, yapmak istediği iş için hangi uygulamayı
-ya da donanımı kullanacağını seçebilir. Bir sistemin arka planda nasıl
-çalıştığı hakkında fikir sahibi olması gerekmez, sadece işine uygun
-uygulamayı bulabilmesi ve kullanabilmesi yeterlidir.<BR>
+Computer literate needs knowing a little about computer technologies;
+can use personal computer for some classic works, can select which
+application or hardware is suitable for his/her work. He/she needs
+only find suitable application for his/her work, he/she needn't know
+about background processes of system.<BR>
 <BR>
-<!--TOC section Bilişim Okur-Yazarı Becerileri-->
+<!--TOC section Computer Literate Skills-->
 
-<H2><A NAME="htoc2">2</A>&nbsp;&nbsp;Bilişim Okur-Yazarı Becerileri</H2><!--SEC END -->
+<H2><A NAME="htoc2">2</A>&nbsp;&nbsp;Computer Literate Skills</H2><!--SEC END -->
 
-Biz bilişim okur-yazarı olarak tanımladığımız kullanıcıların, aşağıdaki
-bilgi ve yeteneklere sahip olduğu varsayıyoruz. Bilişim okur-yazarı
-aşağıdaki işlemleri her durumda sorunsuz olarak yerine getiremiyor
-olabilir; bazı durumlarda kullanıcının yetenekleri ve yetkisi dışındaki
-sorunlar ortaya çıkabilir ve kullanıcı bu temel işlemleri yerine getiremeyebilir.
-Yine de ideal ortamda kullanıcının aşağıdaki yeteneklere sahip olduğu
-düşünülmektedir.<BR>
+We assume that people who defined as computer literates know information
+and have skills below. Computer literate may not do all the things
+below without any mistake in some situations; in some situations some
+problems that beyond users power appears and user may not do basic
+processes. Still assuming the user has skills below in ideal environment.<BR>
 <BR>
-<!--TOC subsection Temel Beceriler-->
+<!--TOC subsection Basic Skills-->
 
-<H3><A NAME="htoc3">2.1</A>&nbsp;&nbsp;Temel Beceriler</H3><!--SEC END -->
-
-<UL><LI>
-Monitörü açıp kapayabilir, iyi görüntü için ayarlayabilir.
-<LI>Güç kablosu takılı mı, güç kaynağı çalışıyormu kontrol edebilir.
-<LI>Fare kullanabilir
-<LI>Yazıcısının ayarlarını yapıp kullanabilir
-<LI>Tarayıcısının ayarlarını yapıp kullanabilir
-<LI>Bilgisayarın çevresel aygıtlarını söküp yeniden takabilir.
-<LI>Yapmak istediği iş için hangi uygulamanın gerekli olduğunu seçebilir
-<LI>Kendisi için gerekli donanımı seçip alabilir
-<LI>Disket, CD, DVD, usbdisk, usbmemory gibi değişik veri saklama ortamlarını
-kullanabilir
-<LI>Gerekli uygulamayı kullanıp CD/DVD yazdırabilir
-<LI>Bilgisayar teknolojisi kullanılan diğer teknolojileri de kullanabilir,
-bilgisayarı ile bunların iletişimini sağlayabilir (cep telefonu, PDA,
-dijital fotoğraf makinesi, vb.)
-</UL>
-<!--TOC subsection Masaüstü becerileri-->
-
-<H3><A NAME="htoc4">2.2</A>&nbsp;&nbsp;Masaüstü becerileri</H3><!--SEC END -->
+<H3><A NAME="htoc3">2.1</A>&nbsp;&nbsp;Basic Skills</H3><!--SEC END -->
 
 <UL><LI>
-Yazılım kurmayı/güncellemeyi/kaldırmayı bilir
-<LI>Masaüstü ortamının ne olduğunu, neler yapabileceğini, nasıl özelleştirebileceğini
-bilir. (duvarkağıdı, saat ayarı, ses ayarı, renkler ve çözünürlük,
-tema, simgeler, vb.<SUP><A NAME="text1" HREF="#note1">1</A></SUP>)
-<LI>Dosyalarını yönetebilir. 
-<UL><LI>
-Yeni dosya/dizin yaratabilir
-<LI>Masaüstünün kopyala/yapıştır/kes özelliklerini kullanabilir
-<LI>Dosya/dizin silebilir
+Can power on/off monitor, configure it for best view.
+<LI>Can check power cable is connected and power supply is working.
+<LI>Can use mouse.
+<LI>Can configure and use printer.
+<LI>Can configure and use web browser.
+<LI>Can mount/demount hardwares.
+<LI>Can select which application is necessary for his/her work.
+<LI>Can select and buy hardware.
+<LI>Can use different kind of storage devices like Floppy, CD, DVD, USB
+Disk, USB Stick etc.
+<LI>Can use burn CD/DVD.
+<LI>Can use technologies that uses computer technology, make connection
+between them (mobile phone, pda, digital camera etc.)
 </UL>
-<LI>Verilerini değişik ortamlara aktarabilir, saklayabilir, yedekleyebilir.
-<LI>Bir uygulamadan nasıl çıkacağını bilir
-<LI>Arşivlemeyi, sıkıştırmayı ve açmayı bilir
-<LI>Yardım dosyalarının varlığını bilir, yazılımlar ile ilgili sorun yaşadığında
-yardım dosyalarını okuyabilir
-<LI>Disk/disket biçimlendirmeyi bilir
-<LI>Ağ üzerinden dosya paylaşımını kullanabilir
-<LI>Çokluortam teknolojilerini kullanabilir (ses, video, grafik, radyo/TV,
-vb.)
-</UL>
-<!--TOC section Kişisel bilgi yönetimi ve ofis uygulamaları becerileri-->
+<!--TOC subsection Desktop Skills-->
 
-<H2><A NAME="htoc5">3</A>&nbsp;&nbsp;Kişisel bilgi yönetimi ve ofis uygulamaları becerileri</H2><!--SEC END -->
+<H3><A NAME="htoc4">2.2</A>&nbsp;&nbsp;Desktop Skills</H3><!--SEC END -->
 
 <UL><LI>
-Kelime işlemci, sunumcu, hesap çizelgesi, vb. ofis yazılımlarını kullanabilir.
-<LI>Kişisel bilgi yönetimi için ajanda, adres defteri, vb. yazılımları
-kullanabilir.
+Knows install/update/uninstall software.
+<LI>Knows what is desktop environment, what he/she can do with it, how
+to customize. (wallpaper, clock configuration, sound configuration,
+resolution and colors, themes, icons etc.<SUP><A NAME="text1" HREF="#note1">1</A></SUP>)
+<LI>Can manage files. 
+<UL><LI>
+Can create file/directory.
+<LI>Can use desktops copy/paste/cut features.
+<LI>Can delete file/directory.
 </UL>
-<!--TOC section İnternet becerileri-->
+<LI>Can transport, save and backup datas.
+<LI>Knows how to exit a application.
+<LI>Knows archiving, compressing and opening.
+<LI>Knows existing of help files, can use them when gets problem with
+softwares.
+<LI>Knows disk formatting.
+<LI>Can use file sharing on network.
+<LI>Can use multimedia technologies (audio, video, graphics, radio/TV
+etc.).
+</UL>
+<!--TOC section Personal information management and office applications skills-->
 
-<H2><A NAME="htoc6">4</A>&nbsp;&nbsp;İnternet becerileri</H2><!--SEC END -->
+<H2><A NAME="htoc5">3</A>&nbsp;&nbsp;Personal information management and office applications skills</H2><!--SEC END -->
 
 <UL><LI>
-İnternete nasıl bağlanacağını bilir
-<LI>Web tarayıcı kullanabilir, web sayfalarında gezinebilir, arama motorlarını
-kullanabilir
-<LI>E-posta kullanabilir
-<LI>İnterneti sadece bilgi/eğlence için değil hayatı kolaylaştımak için
-kullanır (bankalar, yemek sepeti ;))
-<LI>Bazı uygulamalar için eklenti (plug-in) gerektiğinde onları kurabilir
-<LI>İnternetten dosya indirebilir
-<LI>Başka bir bilgisayara bağlanıp kullanabilir
-<LI>Dosya paylaşımı yazılımlarını kullanabilir
-<LI>Görsel hazırlayıcılar ile kendi web sayfasını hazırlayabilir ve düzenleyebilir
+Can use office applications like word processing, presentation, spreadsheet
+etc.
+<LI>Can use personal information manager applications like organizer,
+address book etc.
 </UL>
+<!--TOC section Internet skills-->
+
+<H2><A NAME="htoc6">4</A>&nbsp;&nbsp;Internet skills</H2><!--SEC END -->
+
+<UL><LI>
+Knows how to connect internet.
+<LI>Can use web browser, surf in the internet, use search engines.
+<LI>Can use e-mail.
+<LI>Uses internet to make life easier (banks, e-commerce etc.), not only
+for get information and have fun.
+<LI>Can install plugins if required by programs.
+<LI>Can download files from internet.
+<LI>Can connect and use another computer.
+<LI>Can use file sharing programs.
+<LI>Can create and edit personal web site with visual tools.</UL>
 <!--BEGIN NOTES document-->
-<HR WIDTH="50%" SIZE=1><DL><DT><A NAME="note1" HREF="#text1"><FONT SIZE=5>1</FONT></A><DD>genel olarak ``görünüm'' olarak tanımlanabilir
+<HR WIDTH="50%" SIZE=1><DL><DT><A NAME="note1" HREF="#text1"><FONT SIZE=5>1</FONT></A><DD>can defined as ``appearance'' generally
 </DL>
 <!--END NOTES-->
 </div>
