--- a/web/eng/projeler/kalite/projeler.html
+++ b/web/eng/projeler/kalite/projeler.html
@@ -142,6 +142,37 @@
 	      <br>
 	      </p></td>
   	</tr>
+
+	<tr bgcolor="#004444">
+	    <td>&nbsp;</td>
+	    <td><p class="baslik" align="center">:: Gözlük (Dictionary Application) ::</p>
+	      <p class="metin">
+	      Gözlük is an application that provides to access, edit or search in dictionary files formatted in xml.<a href="http://svn.uludag.org.tr/uludag/trunk/ulubot/">UluBot</a> is also using that files and you can find an example at <a href="http://svn.uludag.org.tr/uludag/trunk/ulubot/sozluk/s%c3%b6zl%c3%bck.xml">here</a>.
+	      <br><br><br>
+	      <div align="center">
+	      <table border="0" width="90%">
+	      	<tr>
+		  <td align="left" class="metin" width="30%"><b>- Status:</b></td><td align="left" class="metin"> Ongoing.</td>
+		</tr>
+		<tr>
+		  <td class="metin" align="left"><b>- SVN:</b></td><td class="metin" align="left">
+		  <a href="http://svn.uludag.org.tr/uludag/trunk/web/eng/">http://svn.uludag.org.tr/uludag/trunk/gozluk/</a></td>
+		</tr>
+	      	<tr>
+		  <td class="metin" align="left"><b>- Responsible:</b></td><td class="metin" align="left">Kaya Oğuz.</td>
+		</tr>
+	      	<tr>
+		  <td class="metin" align="left"><b>- Project Team:</b></td><td class="metin" align="left"> Kaya Oğuz, Barış Metin.</td>
+		</tr>
+	      	<tr>
+		  <td class="metin" align="left"><b>- Screenshot:</b><br><br><img src="./images/gozluk.png"></td>
+		</tr>
+	      </table>
+	      </div>
+	      <br>
+	      </p></td>
+  	</tr>
+ 
  
          </table>
 </td></tr></table>	
