İngilizce kalite sayfaları güncellendi.

--- a/trunk/web/eng/projeler/kalite/bp.html
+++ b/trunk/web/eng/projeler/kalite/bp.html
@@ -23,8 +23,7 @@
 	<table width="80%" border="0" align="center" cellpadding="0" cellspacing="0">
 	 <tr>
 	      <td align="center" class="menubar"><a href="./index.html">Our Mission</a></td>
-	      <td align="center" class="menubar"><a href="./ne_yapabilirim.html">What 
-            can I do?</a></td>
+	      <td align="center" class="menubar"><a href="./ne_yapabilirim.html">What can I do?</a></td>
 	      <td align="center" class="menubar"><a href="./projeler.html">Open Projects</a></td>
 	      <td align="center" class="menubar"><a href="./bp.html">Waiting Projects</a></td>
 	 </tr>
@@ -36,15 +35,25 @@
 	<table width="800" border="0" align="center" cellpadding="6" cellspacing="10">
 	  <tr bgcolor="#004444">
 	    <td>&nbsp;</td>
-	    <td class="baslik"><p>:: Waiting Projects::</p>
-	      <p class="metin" align="center">
+	    <td class="baslik"><p align="center">:: FeedBack ::</p>
+	    
+	      <p class="metin">
+	      This application's aim is get users' hardware information and ideas about Pardus, it's started but not continued.<br><br>
+	      Now it can take a poll and get hardware information, then saves hardware information with poll's results to file named pardus_information.xml in users home directory.<br><br>
+	      You can take its responsibility and talk about it in Quality List, how it must be and integration with other projects (for example Pardul).
 	      <br><br><br>
-              There is no waiting Project :) <br>
-              <br>
-              You can join one of the <a href="./projeler.html">ongoing Projects</a>, 
-              or you can propose a new Project. 
-              <br>
-              <br><br>
+	      <div align="center">
+	      <table border="0" width="90%">
+	      	<tr>
+		  <td align="left" class="metin" width="30%"><b>- Status:</b></td><td align="left" class="metin"> Waiting for manager/programming.</td>
+		</tr>		<tr>
+		  <td class="metin" align="left"><b>- SVN:</b></td><td class="metin" align="left">
+		  <a href="http://svn.uludag.org.tr/uludag/trunk/feedback/">http://svn.uludag.org.tr/uludag/trunk/feedback/</a></td>
+		</tr>
+	      </table>
+	      </div>
+	      <br>
+
 	      </p>
 	    </td>
 	  </tr>
