--- a/trunk/web/eng/projeler/kalite/index.html
+++ b/trunk/web/eng/projeler/kalite/index.html
@@ -37,7 +37,7 @@
 	  <tr bgcolor="#004444">
 	  <tr bgcolor="#004444">
 	    <td height="348">&nbsp;</td>
-	    <td class="baslik"><br><p><img src="cuce01.png" width="150" height="150" hspace="10" vspace="10" align="left">:: Quality Team, Mission ::</p>
+	    <td class="baslik"><br><p>:: Quality Team, Mission ::</p>
 	        <p class="metin">The Uludag Quality Team aims to form a good starting 
               point for people of any level who wish to help and accelerate the 
               operation of the project. If you are always thinking &quot;I want 
