--- a/trunk/web/projeler/kalite/index.html
+++ b/trunk/web/projeler/kalite/index.html
@@ -35,9 +35,8 @@
 	<table width="800" border="0" align="center" cellpadding="6" cellspacing="10">
 	  <tr bgcolor="#004444">
 	    <td height="348">&nbsp;</td>
-	    <td class="baslik"><br>:: Kalite Takımı, Amaç ::</p>
+	    <td class="baslik"><br><p>:: Kalite Takımı, Amaç ::</p>
 	      <p class="metin">
-	      
 	     Uludağ Projesi Kalite Takımı, projenin işleyişini hızlandırmak ve yardım etmek isteyen her
 	     seviyedeki insan için iyi bir başlangıç noktası oluşturmayı hedefler. Eğer sürekli kendinize
 	     "ben de yardım etmek istiyorum" diyorsanız bununla beraber nereden başlayacağınızı bilmiyorsanız
