--- a/web/eng/urunler/pardus_calisan_cd_1.1.html
+++ b/web/eng/urunler/pardus_calisan_cd_1.1.html
@@ -145,7 +145,7 @@
                         <br> 
                         Along with starting up the desktop environment completely, Kaptan Masa&uuml;st&uuml; Desktop Manager will welcome you for setting the wallpaper and mouse.<br> 
                         <br> 
-                        You encounter with Starting Up, Devices, My Documents, Pardus Desktop Sharing and Trash icons on Pardus Desktop, wh,ch is completely started up with your wallpaper.Devices icon shows your storage devices on your computer and supplies to reach to your files on these devices. So you can display the files on your disc or you can save the files that you don't want to lose while you are working with Pardus.With Pardus icon, a local web page which contains purposes of Ulusal Da??t?m Project and project developers' communication information.<br> 
+                        You encounter with Starting Up, Devices, My Documents, Pardus Desktop Sharing and Trash icons on Pardus Desktop, wh,ch is completely started up with your wallpaper.Devices icon shows your storage devices on your computer and supplies to reach to your files on these devices. So you can display the files on your disc or you can save the files that you don't want to lose while you are working with Pardus.With Pardus icon, a local web page which contains purposes of Ulusal Dağıtım Project and project developers' communication information.<br> 
                         <br> 
                         At the right side of toolbar there are several small applications that you can set volume level, screen resolution and keyboard layout with clicking the mouse. And you can reach to the starting up menuwith clicking Pardus icon at the left side of toolbar. <br> 
                         <br> 
@@ -161,7 +161,7 @@
                 <!-- yayın hakkı --> 
                 <br> 
                 <br> 
-                <p class="not">Information and documents on Uluda? Project web pages can be used freely anywhere with original source credit. <em><br> 
+                <p class="not">Information and documents on Uludağ Project web pages can be used freely anywhere with original source credit. <em><br> 
                   <strong>T&Uuml;BİTAK - UEKAE, PK.74 41470, Gebze / Kocaeli - T&uuml;rkiye.</strong></em> For information and suggestion(s) please write to <a
  href="mailto:bilgi%20at%20uludag.org.tr">bilgi at uludag.org.tr</a> </p> 
                 <br> </td> 
