--- a/trunk/web/eng/projeler/kalite/bp.html
+++ b/trunk/web/eng/projeler/kalite/bp.html
@@ -45,7 +45,7 @@
 	      <div align="center">
 	      <table border="0" width="90%">
 	      	<tr>
-		  <td align="left" class="metin" width="30%"><b>- Status:</b></td><td align="left" class="metin"> Waiting for manager/programming.</td>
+		  <td align="left" class="metin" width="30%"><b>- Status:</b></td><td align="left" class="metin"> Waiting for manager/programmer.</td>
 		</tr>		<tr>
 		  <td class="metin" align="left"><b>- SVN:</b></td><td class="metin" align="left">
 		  <a href="http://svn.uludag.org.tr/uludag/trunk/feedback/">http://svn.uludag.org.tr/uludag/trunk/feedback/</a></td>
