Kırık bağlar düzeltildi, kırık bağ ne mi? elbette Broken Link'e bulduğum Türkçe karşılık :p

--- a/trunk/web/eng/projeler/kalite/index.html
+++ b/trunk/web/eng/projeler/kalite/index.html
@@ -58,7 +58,7 @@
               it is needed. In this respect, the Quality Team presents an architecture 
               which finances itself in the context of human resources.<br>
               <br>
-              If you wish you can read the <a href="../../../belgeler/kalite/kalite.html">Quality 
+              If you wish you can read the <a href="http://www.uludag.org.tr/eng/belgeler/kalite/kalite.html">Quality 
               document</a> for further information, or continue with the "<a href="./ne_yapabilirim.html">What 
               can I do?</a>&quot; section.<br>
               <br>
