--- a/trunk/web/eng/projeler/kalite/ne_yapabilirim.html
+++ b/trunk/web/eng/projeler/kalite/ne_yapabilirim.html
@@ -80,7 +80,7 @@
               a new project not taking part among the <a href="./bp.html">waiting 
               projects</a>.<br>
               <br>
-              Please read the <a href="../belgeler/kalite/">quality document</a> 
+              Please read the <a href="http://www.uludag.org.tr/eng/belgeler/kalite/">quality document</a> 
               before joining the list and do not neglect to introduce yourself 
               as stated there.<br>
               <br>
