--- a/trunk/web/projeler/kalite/ne_yapabilirim.html
+++ b/trunk/web/projeler/kalite/ne_yapabilirim.html
@@ -56,7 +56,7 @@
 
 		Ayrıca, burda bahsedilmemiş bir göreve talip olabilir, <a href="./bp.html">bekleyen projeler</a> arasında yer almayan yeni
 		bir proje başlatabilirsiniz.<br><br>
-		Lütfen e-posta listemize üye olmadan önce <a href="../../belgeler/kalite/">kalite belgesi</a>ni okumayı ve listede
+		Lütfen e-posta listemize üye olmadan önce <a href="http://www.uludag.org.tr/belgeler/kalite/">kalite belgesi</a>ni okumayı ve listede
 		orda anlatıldığı şekilde kendinizi tanıtmayı ihmal etmeyiniz.<br><br><br>
 	      
 	      
