sss'te ufak bir eksik..

--- a/trunk/web/sss.html
+++ b/trunk/web/sss.html
@@ -142,7 +142,7 @@
            <img src="./images/bullet-krm.png" width="11" height="11"> Proje Hakkında</span><br><br><br>
 
 		
-		<span class="baslik"><a name="uludag_projesi" href="./sss.html#top"><i>Uludağ Projesi nedir?</i></a></span>
+		<a name="uludag_projesi" href="./sss.html#top"><i>Uludağ Projesi nedir?</i></a>
 		<br><br>
 		<b>Ulu</b>sal <b>Dağ</b>ıtım projesi, <a href="http://www.tubitak.gov.tr/">TÜBİTAK</a> - 
 		<a href="http://www.uekae.tubitak.gov.tr/">UEKAE</a> tarafından başlatılan ve devam ettirilmekte olan,
@@ -161,7 +161,7 @@
 		<br><br>
 		
 
-		<span class="baslik"><a name="uludag_hedefleri" href="./sss.html#top"><i>Uludağ Projesi'nin hedefi nedir?</i></a></span>
+		<a name="uludag_hedefleri" href="./sss.html#top"><i>Uludağ Projesi'nin hedefi nedir?</i></a>
 		<br><br>
 		Projenin hedefleri,
 		<br>
@@ -175,7 +175,7 @@
 		<br> 
 	
 	
-		<span class="baslik"><a name="pardus" href="./sss.html#top"><i>Pardus ismi nereden geliyor?</i></a></span>
+		<a name="pardus" href="./sss.html#top"><i>Pardus ismi nereden geliyor? Neden dağıtımın adı projenin adından farklı?</i></a>
 		<br><br>
 		Pardus adı, Anadolu Parsı'ndan, Panthera Pardus Tulliana'dan geliyor.<br><br>
 		Anadolu Parsı, Leopar alttüründeki büyük kedilerin Anadolu’daki son temsilcilerindendir. Boyu 200-250 cm,
