SSS'da düzenleme, kalite sayfası bağı düzenlendi.

--- a/trunk/web/sss.html
+++ b/trunk/web/sss.html
@@ -533,7 +533,7 @@ Subversion kullanımı ile ilgili ayrıntılı bilgi <a href="http://www.uludag.
 
 		Yardım etmek isteyenleri, kolayca projenin çeşitli alt projelerine adapte etmek ve kendi istedikleri konularda yardım etmeye
 		başlayabilmelerini sağlamak üzere çalışan bir proje takımımız var: Kalite Takımı. Kalite takımının amacı ile ilgili bilgiyi
-		<a href="http://www.uludag.org.tr/projeler/kalite/">http://www.uludag.org.tr/projeler/kalite/</a> adresinden alabilir, ordaki projelere
+		<a href="http://kalite.uludag.org.tr/">http://kalite.uludag.org.tr/</a> adresinden alabilir, ordaki projelere
 		destek verebilir ya da yeni fikirler ile Kalite Takımı'nı yönlendirebilirsiniz.<br><br>
 		
 		<a name="program" href="./sss.html#top"><i>Bir uygulama yazdım, Pardus'a onu da ekleyebilir misiniz?</i></a><br><br>
@@ -553,7 +553,7 @@ Subversion kullanımı ile ilgili ayrıntılı bilgi <a href="http://www.uludag.
            <img src="./images/bullet-krm.png" width="11" height="11"> Yansılar</span><br><br>
 		<a name="yansi" href="./sss.html#top"><i>Pardus'un işyerimden/üniversitemden indirilmesini istiyorum, yansı olabilir miyim?</i></a><br><br>
 
-		Olabilirsiniz, bu gibi konularda ayrıntılı bilgi almak için <a href="mailto:bilgi [ at ] uludag.org.tr">bilgi [ at ] uludag.org.tr</a> adresi ile bağlantıya
+		Olabilirsiniz, bu gibi konularda ayrıntılı bilgi almak için <a href="mailto:bilgi [ at ] uludag.org.tr">bilgi [ at ] uludag.org.tr</a> adresi ile bağlantıya
 		geçebilirsiniz.
 		<br><br>
 		
