SSS sayfaları düzenlendi.

--- a/trunk/web/eng/sss.html
+++ b/trunk/web/eng/sss.html
@@ -386,7 +386,7 @@ The informations about the bug you reported or the request you asked will be mai
 		
 		<a name="yardim_2" href="./sss.html#top"><i>I want to help. Where is the information about help?</i></a><br><br>
 
-We have a project team for the ones who wants to help : Quality Team. This team provides them to adapt the sub-projects and to help starting projects that will be developed by them. You can find information about Quality Team on <a href="http://www.uludag.org.tr/projeler/kalite/"> Quality Team web page </a>. You can contribute the projects specified in the Quality Team web page or direct the Quality Team with new ideas.
+We have a project team for the ones who wants to help : Quality Team. This team provides them to adapt the sub-projects and to help starting projects that will be developed by them. You can find information about Quality Team on <a href="http://kalite.uludag.org.tr/eng/"> Quality Team web page</a>. You can contribute the projects specified in the Quality Team web page or direct the Quality Team with new ideas.
 <br><br>
 		
 		<a name="program" href="./sss.html#top"><i>I wrote an application. Can you add it to Pardus?
